@@ -1,3 +1,7 @@
+2008-11-18  Eitan Isaacson  <eitan@ascender.com>
+
+    * src/lib/accerciser/node.py: If duration is 0, don't highlight at all.
+
 2008-10-10  Eitan Isaacson  <eitan@ascender.com>
 
     * src/lib/accerciser/i18n.py.in:
